Set fixed date and add to Links section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ class: center, middle, inverse, title-slide
 # Non-Standard Evaluation
 ## and Metaprogramming in R
 ### <a href='https://github.com/janusvm'>Janus Valberg-Madsen</a>
-### 2018-06-07 @ Aalborg R User Group
+### 2018-10-02 @ Aalborg R User Group
 
 ---
 
@@ -337,7 +337,9 @@ name: links
 
 📕 [Advanced R](https://adv-r.hadley.nz) by Hadley Wickham (online book)
 
-&lt;i class="fa fa-github"&gt;&lt;/i&gt; [repository](https://github.com/AalborgRUG/talk-nse) for this presentation with source code and extra notes
+- in particular, the chapter on [Metaprogramming](https://adv-r.hadley.nz/meta.html)
+
+&lt;i class="fa fa-github"&gt;&lt;/i&gt; [repository](https://github.com/AalborgRUG/talk-nse) for this presentation with source code
 
 &lt;i class="fa fa-github"&gt;&lt;/i&gt; [AalborgRUG](https://github.com/AalborgRUG), a GitHub Organisation for this R User Group meant for sharing slides, notes, and code.
 Contact [Ege](mailto:rubak@math.aau.dk) to request membership
