--- a/index.html
+++ b/index.html
@@ -23,6 +23,40 @@ class: center, middle, inverse, title-slide
 
 
 
+
+# My background with programming and R
+
+- Tampered a little with Android during my STX years (2009-2012)
+
+- Introduced to Python for 2nd semester project at AAU (spring 2014)
+
+- Introduced to R for for 5th semester course in numerical optimisation (autumn 2015)
+
+- Used R extensively since then, both for university projects and as part of my former student assistant job at NEAS Energy A/S (2016-2018)
+
+
+---
+
+# Topics in this presentation
+
+1. What is metaprogramming?
+
+2. How to do it in practise
+
+3. Case studies
+
+
+???
+1. An introduction to metaprogramming, explaining the concepts
+
+2. An in-depth look at how to (as a developer) use it in R
+
+3. Showcase some examples where it makes sense to use, including a live demo
+
+---
+
+
+name: metaprogramming
 class: center, middle, inverse
 background-image: url(./img/black-50.png), url(./img/code.jpg)
 background-size: cover
@@ -30,9 +64,18 @@ background-size: cover
 # What is metaprogramming?
 
 ???
+According to Wikipedia:
+
+&gt; Metaprogramming is a programming technique in which computer programs have the
+&gt; ability to treat programs as their data. It means that a program can be
+&gt; designed to read, generate, analyse or transform other programs, and even
+&gt; modify itself while running.
+
+
 - when code can inspect and modify other code
 - in other words, when _code becomes data_
 - 
+
 
 ---
 
@@ -225,6 +268,8 @@ identical(e1, e2)
 
 
 ---
+
+
 name: applications
 class: center, middle, inverse
 
@@ -234,8 +279,9 @@ class: center, middle, inverse
 
 - time to look at some examples
 
-
 ---
+&lt;!-- Programming with tidyverse -------------------------------------------------------------------&gt;
+
 
 # Programming with tidyverse
 
@@ -244,7 +290,7 @@ class: center, middle, inverse
 --
 
 .pull-left[
-- Problem: `tidyverse` functions are made for interactive use/scripting
+- Problem: `tidyverse` functions are made for interactive use
 
 
 ```r
@@ -309,6 +355,8 @@ Quote user input | `substitute` | `enexpr`, `enquo`
 
 
 ---
+
+
 name: tips
 
 # Tips &amp; tricks
@@ -330,6 +378,8 @@ name: tips
 
 
 ---
+
+
 name: links
 
 # Links
